--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,35 +1,60 @@
-<nav class="navbar">
-    <!-- Brand -->
-    <a class="navbar-brand" href="#">A>Way>How></a>
-  
-    <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="#section1">Section 1</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#section2">Section 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#section3">Link</a>
-            </li>
-            <!-- Dropdown -->
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-                    Dropdown link
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Link 1</a>
-                    <a class="dropdown-item" href="#">Link 2</a>
-                    <a class="dropdown-item" href="#">Link 3</a>
-                </div>
-            </li>                
-        </ul>
-    </div>
-</nav>        
+<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+  <div class="position-sticky pt-3" style="line-height: 0.8;">
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <a class="nav-link text-dark fs-5" href="/config.html">
+          Configuración
+        </a>
+      </li>
+      </br>
+      <li class="nav-item">
+        <a class="nav-link text-dark fs-5" href="/retenciones.html">
+          Retenciones
+        </a>
+        <!-- <ul class="nav flex-column">
+          <li class="nav-item">
+              <a class="nav-link text-dark fs-6" href="/retenciones.html#Ret-Proveedor">
+                  &nbsp;&nbsp;- Proveedores
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-dark fs-6" href="/retenciones.html#Ret-Empleado">
+                  &nbsp;&nbsp;- Empleados
+              </a>
+          </li>
+        </ul> -->
+      </li>
+      </br>
+      <li class="nav-item">
+        <a class="nav-link text-dark fs-5" href="/IVA.html">
+          IVA
+        </a>
+        <!-- <ul class="nav flex-column">
+          <li class="nav-item">
+              <a class="nav-link text-dark fs-6" href="/IVA.html#IVA-Tercero">
+                  &nbsp;&nbsp;- Terceros
+              </a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link text-dark fs-6" href="/IVA.html#IVA-Chequeo">
+                  &nbsp;&nbsp;- Chequeo
+              </a>
+          </li>
+        </ul> -->
+      </li>
+      </br>
+      <li class="nav-item">
+        <a class="nav-link text-dark fs-5" href="/syncro.html">
+          Sincronización
+        </a>
+      </li>
+      </br>
+      <li class="nav-item">
+        <a class="nav-link text-dark fs-5" href="/libros.html">
+          Libros Oficiales
+        </a>
+      </li>
+      </br>
+    </ul>
+  </div>
+</nav>
