--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
-<footer>
-    <div class="container">
-        <p>My Footer</p>
-    </div>
-</footer>
+<footer class="footer mt-auto py-3 bg-light">
+  <div class="container">
+      <span class="lead fs-6">
+          <a class="text-dark" href="https://www.summar.es">Summar</a>&nbsp;Todos los derechos reservados
+      </span>
+  </div>
+</footer>      
