--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-    <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-3" href="/">Taxor Cloud</a>
-    <button class="navbar-toggler d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+<header>
+    <div class="container">
+        <p>My Footer</p>
+    </div>
 </header>      
