--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <div class="container-fluid awhColor"></div>
+    <div class="container-fluid awhColorDark">
         <!-- Brand -->
         <a class="navbar-brand" href="/">A>Way>How></a>
     
