--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="container-fluid awhColor">
+    <div class="container-fluid awhColorDark">
         <p>My Footer</p>
     </div>
 </footer>
