--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="container-fluid awhColorDark">
-        <p>My Header</p>
+    <div class="container-fluid">
+        <img src="aWayHow.png" alt="A Way How" height="50%" />
     </div> 
 </header>      
