--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
-<nav class="navbar">
+<nav class="navbar navbar-expand-lg">
     <div class="container-fluid awhColorDark">
         <!-- Brand -->
-        <a class="navbar-brand" href="/">A>Way>How></a>
+        <a class="navbar-brand" href="#">A>Way>How></a>
     
         <!-- Toggler/collapsibe Button -->
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
