--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,3 @@
-<footer>
-    <div class="container-fluid awhColorDark">
-        <p>My Footer</p>
-    </div>
-</footer>
+<div class="jumbotron text-center" style="margin-bottom:0">
+    <p>Footer</p>
+</div>
