--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,4 @@
-<header>
-    <div class="container-fluid">
-        <img src="aWayHow.png" alt="A Way How" height="50%" />
-    </div> 
-</header>      
+<div class="jumbotron text-center" style="margin-bottom:0">
+    <h1>My First Bootstrap 4 Page</h1>
+    <p>Resize this responsive page to see the effect!</p> 
+</div>
