--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,7 @@
-<div class="jumbotron text-center" style="margin-bottom:0">
-    <h1>My First Bootstrap 4 Page</h1>
-    <p>Resize this responsive page to see the effect!</p> 
+<div class="container-fluid text-center" style="margin-bottom:0">
+    <h1>A>Way>How></h1>
+    <p>
+        Business Process in Business Central</br>
+        A>Way>How> is a tool for Business Central that allows you to design, document, train employees and monitor your business process.
+    </p> 
 </div>
