--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,11 @@
 <div class="container-fluid text-center" style="margin-bottom:0">
-    <h1>A>Way>How></h1>
-    <p>
-        Business Process in Business Central</br>
-        A>Way>How> is a tool for Business Central that allows you to design, document, train employees and monitor your business process.
-    </p> 
+    <div class="row">
+        <div class="col-sm-4">
+            <img src="/aWayHow.png" alt="A Way How logo" />
+        </div>
+        <div class="col-sm-8">
+            <h1>A>Way>How></h1>
+            <h3>Business Process in Business Central</h3>
+            <p>A>Way>How> is a tool for Business Central that allows you to design, document, train employees and monitor your business process.</p>
+        </div>
 </div>
