--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,8 +4,7 @@
             <img src="/aWayHow.png" alt="A Way How logo" />
         </div>
         <div class="col-sm-8">
-            <h1>A>Way>How></h1>
             <h3>Business Process in Business Central</h3>
-            <p>A>Way>How> is a tool for Business Central that allows you to design, document, train employees and monitor your business process.</p>
+            <h4>Way>How> is a tool for Business Central that allows you to design, document, train employees and monitor your business process.</h4>
         </div>
 </div>
