--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,5 @@
 <div class="container-fluid text-center" style="margin-bottom:0">
-    <div class="row">
-        <div class="col-sm-4">
-            <img src="/aWayHow.png" alt="A Way How logo" />
-        </div>
-        <div class="col-sm-8">
-            <h3>Business Process in Business Central</h3>
-            <h4>Way>How> is a tool for Business Central that allows you to design, document, train employees and monitor your business process.</h4>
-        </div>
+    <h3>A>Way>How></h3>
+    <h4>Business Process in Business Central</h4>
+    <h6>A>Way>How> is a tool for Business Central that allows you to design, document and monitor your business process.</h6>
 </div>
