--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,5 @@
 <div class="container-fluid text-center" style="margin-bottom:0">
+    <img src="/aWayHow.png" alt="A Way How logo" class="float-left" />
     <h3 class="awhColorDark">A>Way>How></h3>
     <h4>Business Process in Business Central</h4>
     <h6>A>Way>How> is a tool for Business Central that allows you to design, document and monitor your business process.</h6>
