--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,5 +3,5 @@
     <h3 class="awhColorDark">A>Way>How></h3>
     <h4>Business Process in Business Central</h4>
 </div>
-<LoginControl />
+<div id="LoginControl"></div>
 <br>
