--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
         <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script>
         <!-- Babel JSX -->
-        <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>         -->
+        <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>        
         <!-- Propio -->
         <script src="/js/awayhow.js"></script>
     </body>
