--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,7 +12,8 @@
           <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <div id="loginHandler"></div>
+          <!-- <a class="nav-link" href="#">Link</a> -->
         </li>    
       </ul>
     </div>  
