--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,21 +1,22 @@
+<br>
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <a class="navbar-brand" href="/">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/templates.html">Templates</a>
-        </li>
-        <li class="nav-item">
-          <div id="loginHandler"></div>
-          <!-- <a class="nav-link" href="#">Link</a> -->
-        </li>    
-      </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/getstarted.html">Get Started</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/templates.html">Templates</a>
+            </li>
+            <li class="nav-item">
+                <div id="loginHandler"></div>
+                <!-- <a class="nav-link" href="#">Link</a> -->
+            </li>    
+        </ul>
     </div>  
-  </nav>
-  <br>
+</nav>
+<br>
