--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,10 +7,12 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="/getstarted.html">Get Started</a>
+                <div id="menuOptHandler" data-href="/getstarted.html" data-text="Get Started"></div>
+                <!-- <a class="nav-link" href="/getstarted.html">Get Started</a> -->
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/templates.html">Templates</a>
+                <div id="menuOptHandler" data-href="/templates.html" data-text="Templates"></div>
+                <!-- <a class="nav-link" href="/templates.html">Templates</a> -->
             </li>
             <li class="nav-item">
                 <div id="loginHandler"></div>
