--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="container-fluid text-center" style="margin-bottom:0">
-    <img src="/aWayHow.png" alt="A Way How logo" class="float-left" />
+    <img src="/aWayHow.png" alt="A Way How logo" class="float-left" width="100px" />
     <h3 class="awhColorDark">A>Way>How></h3>
     <h4>Business Process in Business Central</h4>
 </div>
