--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <title>{{ page.title }}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="icon" type="image/png" href="/aWayHow.png">
+        <link rel="icon" type="image/png" href="/images/maskable_icon_x1.png">
         <link rel="manifest" href="/manifest.webmanifest">
 
         <!-- Bootstrap -->
@@ -17,6 +17,7 @@
         {% include navigation.html %}
         {{ content }}
         {% include footer.html %}
+        {% include cookConsMan.html %}
         <!-- JQuery -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <!-- Bootstrap -->
@@ -28,5 +29,6 @@
         <!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> -->
         <!-- Propio -->
         <script src="/js/awayhow.js"></script>
+        <script src="/js/cookConsMan.js"></script>
     </body>
 </html>
