--- a/_includes/cookConsMan.html
+++ b/_includes/cookConsMan.html
@@ -1,9 +1,34 @@
 <div id="cookConsMan"></div>
+
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Understood</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
     'use strict';
 
     if (!GetCookieConsent()) {
         document.getElementById("cookConsMan").innerHTML = "Manage Cookie Consent";
+        // var attr = document.getElementById("staticBackdrop").attributes;
+        // if (attr['aria-hidden'].value == "true")
+        document.getElementById("staticBackdrop").setAttribute("aria-hidden", "false");
     }
  
     function GetCookieConsent() {
