--- a/_includes/cookConsMan.html
+++ b/_includes/cookConsMan.html
@@ -1,4 +1,8 @@
-<div id="cookConsMan"></div>
+<div id="cookConsMan">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#staticBackdrop">
+        Launch static backdrop modal
+    </button>  
+</div>
 
 <!-- Modal -->
 <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -24,11 +28,13 @@
 <script>
     'use strict';
 
+    document.getElementById("cookConsMan").style.display = "none";
     if (!GetCookieConsent()) {
-        document.getElementById("cookConsMan").innerHTML = "Manage Cookie Consent";
+        // document.getElementById("cookConsMan").innerHTML = "Manage Cookie Consent";
+        document.getElementById("cookConsMan").style.display = "block";
         // var attr = document.getElementById("staticBackdrop").attributes;
         // if (attr['aria-hidden'].value == "true")
-        document.getElementById("staticBackdrop").setAttribute("aria-hidden", "false");
+        // document.getElementById("staticBackdrop").setAttribute("aria-hidden", "false");
     }
  
     function GetCookieConsent() {
